# ChangeLog for sci-libs/mkl
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/mkl/ChangeLog,v 1.33 2008/07/13 18:13:16 bicatali Exp $

*mkl-10.0.3.020-r3 (13 Jul 2008)
*mkl-10.0.2.018-r2 (13 Jul 2008)

  13 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  mkl-10.0.2.018-r1.ebuild, +mkl-10.0.2.018-r2.ebuild,
  mkl-10.0.3.020-r2.ebuild, +mkl-10.0.3.020-r3.ebuild:
  Added mkl_lapack for more robust linking to lapack (see bug #230837), a
  warning for gfortran profile and restructured the generation of profiles.

  08 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  mkl-10.0.2.018-r1.ebuild, mkl-10.0.3.020-r2.ebuild:
  Fixed a bad symlink for cblas.h when mkl profile is selected, closing bug
  #231154

*mkl-10.0.3.020-r2 (07 Jul 2008)
*mkl-10.0.2.018-r1 (07 Jul 2008)

  07 Jul 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -mkl-10.0.2.018.ebuild, +mkl-10.0.2.018-r1.ebuild, -mkl-10.0.3.020.ebuild,
  -mkl-10.0.3.020-r1.ebuild, +mkl-10.0.3.020-r2.ebuild:
  pkg-config files now only link to the mkl directory. Fixed some syntax and
  links, and backported changes to 10.0.2.18.

*mkl-10.0.3.020-r1 (23 Jun 2008)

  23 Jun 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +mkl-10.0.3.020-r1.ebuild:
  Added a symlink for cblas.h, pkg-config options for include directories,
  and removed rpm cruft from unpacking.

  29 May 2008; Sébastien Fabbro <bicatali@gentoo.org>
  mkl-10.0.3.020.ebuild:
  Fixed installation of the tools directory

  26 May 2008; Sébastien Fabbro <bicatali@gentoo.org>
  mkl-10.0.2.018.ebuild, mkl-10.0.3.020.ebuild:
  Fixed include dir locations in pkgconfig files

*mkl-10.0.3.020 (23 May 2008)

  23 May 2008; Sébastien Fabbro <bicatali@gentoo.org>
  +mkl-10.0.3.020.ebuild:
  Version bump, closing bug #221975

  21 Apr 2008; Sébastien Fabbro <bicatali@gentoo.org> mkl-9.1.023.ebuild,
  mkl-10.0.2.018.ebuild:
  Re-organized dependencies for pkg-config (bug #217278) and fortran
  compilers
