@@ -10,4 +10,11 @@ library, and random number generators. It also has multiprocessor
 capacities. The package is installed as binary and has a restrictive
 license. Please see license terms and home page for proper use.
 </longdescription>
+<use>
+  <flag name='fortran95'>Build static FORTRAN 95 BLAS/LAPACK interface</flag>
+  <flag name='int64'>Install the 64 bits integer library (double package size)
+    </flag>
+  <flag name='serial'>Install the serial (as non-threaded) libraries as well,
+    double package size</flag>
+</use>
 </pkgmetadata>
